<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.dzakyhdr.fixholand.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_menu"
            app:destination="@id/nav_menu" />
    </fragment>
    <fragment
        android:id="@+id/nav_menu"
        android:name="com.dzakyhdr.fixholand.ui.menu.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" >
        <action
            android:id="@+id/action_nav_menu_to_nav_food_list"
            app:destination="@id/nav_food_list" />
    </fragment>
    <fragment
        android:id="@+id/nav_food_detail"
        android:name="com.dzakyhdr.fixholand.ui.fooddetail.FoodDetailFragment"
        android:label="@string/menu_food_detail"
        tools:layout="@layout/fragment_food_detail" />
    <fragment
        android:id="@+id/nav_view_orders"
        android:name="com.dzakyhdr.fixholand.ui.view_orders.ViewOrdersFragment"
        android:label="@string/menu_view_order"
        tools:layout="@layout/fragment_view_orders" />
    <fragment
        android:id="@+id/nav_food_list"
        android:name="com.dzakyhdr.fixholand.ui.foodlist.FoodListFragment"
        android:label="@string/menu_foodlist"
        tools:layout="@layout/fragment_food_list">
        <action
            android:id="@+id/action_nav_food_list_to_nav_food_detail"
            app:destination="@id/nav_food_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.dzakyhdr.fixholand.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart"/>
</navigation>